--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "sails": "^1.2.4",
     "sails-hook-grunt": "^4.0.0",
     "sails-hook-orm": "^2.1.1",
-    "sails-hook-sockets": "^2.0.0"
+    "sails-hook-sockets": "^2.0.0",
+    "sails-hook-uploads": "^0.4.3",
+    "sails-local-fs": "^0.9.11"
   },
   "devDependencies": {
     "eslint": "5.16.0"
