--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "2.0.3",
     "grunt": "1.0.4",
     "lodash": "^4.17.15",
     "sails": "^1.2.4",
@@ -15,7 +17,8 @@
     "sails-hook-orm": "^2.1.1",
     "sails-hook-sockets": "^2.0.0",
     "sails-hook-uploads": "^0.4.3",
-    "sails-local-fs": "^0.9.11"
+    "sails-local-fs": "^0.9.11",
+    "sails-mongo": "^1.1.0"
   },
   "devDependencies": {
     "eslint": "5.16.0"
