--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "sails-hook-sockets": "^2.0.0",
     "sails-hook-uploads": "^0.4.3",
     "sails-local-fs": "^0.9.11",
-    "sails-mongo": "^1.1.0"
+    "sails-mongo": "^1.1.0",
+    "skipper-gridfs": "^1.0.2"
   },
   "devDependencies": {
     "eslint": "5.16.0"
   },
   "scripts": {
-   
-    "start": "sails lift" ,
+    "start": "cross-env NODE_ENV=production node app.js",
     "test": "npm run lint && npm run custom-tests && echo 'Done.'",
     "lint": "./node_modules/eslint/bin/eslint.js . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
     "custom-tests": "echo \"(No other custom tests yet.)\" && echo"
